# template

./: .coverage  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
.github/workflows/reusables/: quality.yaml  semantic-release.yaml
src/: hello_service.py
tests/: test_entrypoint.py  test_entrypoint.py,cover  test_hello_service.py  test_hello_service.py,cover
