[tool.poetry]
name = "catdevnull"
version = "0.1.0"
description = ""
authors = ["Cristopher Adasme <cristopher@getxerpa.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
