[tool.poetry]
name = "src"
version = "1.0.1"
description = ""
authors = ["Cristopher Adasme <cristopher@getxerpa.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"
nameko = "^2.14.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "src/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip3 install poetry && poetry build"